objects/dataload02__c.object
<CustomObject>
    <description>testing dataloader insert and  update</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datalabel02__c</fullName>
        <inlineHelpText>Testing for data loader</inlineHelpText>
        <label>datalabel02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dtforlab02__c</fullName>
        <label>dtforlab02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>numlab02__c</fullName>
        <label>numlab02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>dataload02</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>dataload01 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dataloader02</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>